# stable-audio-3

./: .gitignore  README.md  pyproject.toml  run_basic_webui.py  run_gradio.py  stable-audio-tools-dev-commit-hash.txt  train_lora.py
docs/: inference.md
docs/guides/: model-overview.md
docs/workflows/: autoencoder.md  inference.md  lora.md  lora_training.md
optimized/mlx/: README.md  bootstrap.sh
scripts/: generate_song_describer.py  pre_encode_dataset.py  test_generation_time.py  train_lora.py
stable_audio_3/: __init__.py  cli.py  loading_utils.py  model.py  model_configs.py  pipeline.py
stable_audio_3/core/: adp.py  autoencoders.py
stable_audio_3/core/minlora/: model.py
stable_audio_3/data/: dataset.py  utils.py
stable_audio_3/inference/: generation.py  inversion.py  sampling.py
stable_audio_3/inference/k_diffusion/: __init__.py  external.py  sampling.py  utils.py
stable_audio_3/interface/: basic_cli_webui.py  diffusion_cond.py  gradio.py  reprompt.py
stable_audio_3/interface/interfaces/: autoencoder.py  captioner.py  diffusion_cond.py
stable_audio_3/models/: adp.py  attn_masks.py  autoencoders.py  blocks.py  bottleneck.py  conditioners.py  diffusion.py  dit.py  factory.py  hpss.py  mir.py  pretransforms.py  utils.py
stable_audio_3/models/lora/: model.py
stable_audio_3/models/minlora/: __init__.py  model.py  utils.py
tests/: conftest.py  test_autoencoder.py  test_cli.py  test_inference.py  test_lora.py
tests/utils/: audio_checks.py
